# ND_R_HomeServiceRobot

./: ReadMe.md
add_markers/: CMakeLists.txt  package.xml
add_markers/src/: add_markers.cpp
pick_objects/: CMakeLists.txt  package.xml
pick_objects/src/: pick_objects.cpp
scripts/: home_service.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
