<?xml version="1.0"?>
<package>
  <name>add_markers</name>
  <version>0.0.0</version>
  <description>The display marker package</description>

  <!-- maintainer and author -->
  <maintainer email="saka1s.jp@gmail.com">sakai</maintainer>
  <author email="saka1s.jp@gmail.com">sakai</author>

  <!-- License -->
  <license>TODO</license>

  <!-- build and run dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- export -->
  <export></export>

</package>

