<?xml version="1.0"?>
<package>
  <name>pick_objects</name>
  <version>0.0.0</version>
  <description>The pickup objects package</description>

  <!-- maintainer and author -->
  <maintainer email="saka1.jp@gmail.com">sakai</maintainer>
  <author email="saka1.jp@gmail.com">sakai</author>

  <!-- License -->
  <license>TODO</license>

  <!-- build and run dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- export -->
  <export></export>

</package>

